[gd_scene load_steps=20 format=3 uid="uid://bg56wmvqk8h4j"]

[ext_resource type="Script" path="res://HomeScreen.gd" id="1_l0v3e"]
[ext_resource type="FontFile" uid="uid://blbll0wbm4msk" path="res://assets/fonts/PixeloidSans-mLxMm.ttf" id="2_5wsn3"]
[ext_resource type="FontFile" uid="uid://4rp8ixlmsfu4" path="res://assets/fonts/PixelTandysoft-0rJG.ttf" id="2_dhl3i"]
[ext_resource type="Texture2D" uid="uid://cmg3v7t101egc" path="res://assets/UI/border.png" id="2_wvsig"]
[ext_resource type="Shader" path="res://shaders/chromatic_aberration.gdshader" id="3_blqmu"]
[ext_resource type="Texture2D" uid="uid://clc3ow7rvgmsp" path="res://assets/beam.png" id="4_ffi38"]
[ext_resource type="Texture2D" uid="uid://dgubcdeysf4n3" path="res://assets/UI/icons.png" id="5_5nak2"]
[ext_resource type="Texture2D" uid="uid://da1y6q4rq7mpu" path="res://assets/UI/sensor_icon.png" id="5_j7xpm"]
[ext_resource type="Texture2D" uid="uid://2cirhdn06ain" path="res://assets/UI/remote_sensor_icon.png" id="6_2aw6j"]
[ext_resource type="Texture2D" uid="uid://bl3s7mdotqwfx" path="res://assets/UI/oxygen_icon.png" id="7_jisu6"]
[ext_resource type="Texture2D" uid="uid://dwla1y4meiyr1" path="res://assets/UI/speed_icon.png" id="8_ean4d"]
[ext_resource type="Texture2D" uid="uid://5es7o1ubpwfa" path="res://assets/UI/diamond.png" id="9_kg4p2"]
[ext_resource type="Script" path="res://scenes/ResultScreen.gd" id="10_q8m8g"]

[sub_resource type="AtlasTexture" id="AtlasTexture_viu07"]
atlas = ExtResource("5_5nak2")
region = Rect2(62.0522, 29.4312, 11.2158, 12.432)

[sub_resource type="AtlasTexture" id="AtlasTexture_kyey7"]
atlas = ExtResource("5_5nak2")
region = Rect2(33.108, 0.110886, 14.3238, 16.3508)

[sub_resource type="AtlasTexture" id="AtlasTexture_32gr2"]
atlas = ExtResource("5_5nak2")
region = Rect2(65.1341, 0.379914, 14.9995, 18.648)

[sub_resource type="AtlasTexture" id="AtlasTexture_jydpq"]
atlas = ExtResource("5_5nak2")
region = Rect2(0.136368, 31.0541, 16.4859, 17.567)

[sub_resource type="AtlasTexture" id="AtlasTexture_mlo83"]
atlas = ExtResource("5_5nak2")
region = Rect2(30.2677, 29.7006, 17.9724, 19.7291)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_355br"]
shader = ExtResource("3_blqmu")
shader_parameter/r_displacement = Vector2(0.5, 0)
shader_parameter/g_displacement = Vector2(0, 0)
shader_parameter/b_displacement = Vector2(-0.5, 0)

[node name="HomeScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_l0v3e")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UpgradeContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 12

[node name="Border" type="Sprite2D" parent="CanvasLayer/UpgradeContainer"]
position = Vector2(622, 18)
texture = ExtResource("2_wvsig")

[node name="Border2" type="Sprite2D" parent="CanvasLayer/UpgradeContainer"]
position = Vector2(622, 342)
rotation = 1.5708
texture = ExtResource("2_wvsig")

[node name="Border3" type="Sprite2D" parent="CanvasLayer/UpgradeContainer"]
position = Vector2(18, 342)
rotation = -3.14159
texture = ExtResource("2_wvsig")

[node name="Border4" type="Sprite2D" parent="CanvasLayer/UpgradeContainer"]
position = Vector2(18, 18)
rotation = -1.5708
texture = ExtResource("2_wvsig")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UpgradeContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Label" type="Label" parent="CanvasLayer/UpgradeContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_dhl3i")
theme_override_font_sizes/font_size = 24
text = "Upgrades
"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/UpgradeContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Upgrade" type="VBoxContainer" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="UpgradeBox" type="TextureRect" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade"]
custom_minimum_size = Vector2(100, 150)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = ExtResource("4_ffi38")

[node name="Panel" type="Panel" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade"]
layout_mode = 2

[node name="Icon" type="Sprite2D" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade/Panel"]
position = Vector2(50, -114)
scale = Vector2(5.19763, 5.19763)
texture = SubResource("AtlasTexture_viu07")

[node name="Title" type="Label" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade/Panel"]
layout_mode = 0
offset_top = -76.0
offset_right = 100.0
offset_bottom = -56.0
size_flags_horizontal = 0
size_flags_vertical = 10
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_dhl3i")
theme_override_font_sizes/font_size = 12
text = "Remote Sonar"
horizontal_alignment = 1

[node name="Description" type="Label" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade/Panel"]
layout_mode = 0
offset_top = -56.0
offset_right = 100.0
offset_bottom = -4.0
size_flags_horizontal = 0
size_flags_vertical = 10
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_dhl3i")
theme_override_font_sizes/font_size = 10
text = "increases
charge 3 > 4
Range 0% > 10%"
horizontal_alignment = 1
autowrap_mode = 2

[node name="UpSonarButton" type="Button" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_dhl3i")
text = "Upgrage"

[node name="Cost" type="Label" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_fonts/font = ExtResource("2_dhl3i")
theme_override_font_sizes/font_size = 12
text = "250G"
horizontal_alignment = 1

[node name="Upgrade2" type="VBoxContainer" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="UpgradeBox" type="TextureRect" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade2"]
custom_minimum_size = Vector2(100, 150)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = ExtResource("4_ffi38")

[node name="Panel" type="Panel" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade2"]
layout_mode = 2

[node name="Icon" type="Sprite2D" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade2/Panel"]
position = Vector2(50, -111)
scale = Vector2(2.9724, 2.9724)
texture = SubResource("AtlasTexture_kyey7")

[node name="Title" type="Label" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade2/Panel"]
layout_mode = 0
offset_top = -76.0
offset_right = 100.0
offset_bottom = -56.0
size_flags_horizontal = 0
size_flags_vertical = 10
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_dhl3i")
theme_override_font_sizes/font_size = 12
text = "Oxygen 
Increase"
horizontal_alignment = 1

[node name="Description" type="Label" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade2/Panel"]
layout_mode = 0
offset_top = -39.0
offset_right = 100.0
offset_bottom = 13.0
size_flags_horizontal = 0
size_flags_vertical = 10
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_dhl3i")
theme_override_font_sizes/font_size = 10
text = "Capacity 100 > 110"
horizontal_alignment = 1
autowrap_mode = 2

[node name="UpOxygenButton" type="Button" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_dhl3i")
text = "Upgrage"

[node name="Cost" type="Label" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_fonts/font = ExtResource("2_dhl3i")
theme_override_font_sizes/font_size = 12
text = "250G"
horizontal_alignment = 1

[node name="Upgrade3" type="VBoxContainer" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="UpgradeBox" type="TextureRect" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade3"]
custom_minimum_size = Vector2(100, 150)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = ExtResource("4_ffi38")

[node name="Panel" type="Panel" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade3"]
layout_mode = 2

[node name="Icon" type="Sprite2D" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade3/Panel"]
position = Vector2(49, -109)
scale = Vector2(2.92898, 2.92898)
texture = SubResource("AtlasTexture_32gr2")

[node name="Title" type="Label" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade3/Panel"]
layout_mode = 0
offset_top = -76.0
offset_right = 100.0
offset_bottom = -56.0
size_flags_horizontal = 0
size_flags_vertical = 10
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_dhl3i")
theme_override_font_sizes/font_size = 12
text = "Speed
Increase"
horizontal_alignment = 1

[node name="Description" type="Label" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade3/Panel"]
layout_mode = 0
offset_left = -2.0
offset_top = -34.0
offset_right = 98.0
offset_bottom = 18.0
size_flags_horizontal = 0
size_flags_vertical = 10
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_dhl3i")
theme_override_font_sizes/font_size = 10
text = "100% > 105%"
horizontal_alignment = 1
autowrap_mode = 2

[node name="UpSpeedButton" type="Button" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_dhl3i")
text = "Upgrage"

[node name="Cost" type="Label" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_fonts/font = ExtResource("2_dhl3i")
theme_override_font_sizes/font_size = 12
text = "250G"
horizontal_alignment = 1

[node name="Upgrade4" type="VBoxContainer" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="UpgradeBox" type="TextureRect" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade4"]
custom_minimum_size = Vector2(100, 150)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = ExtResource("4_ffi38")

[node name="Panel" type="Panel" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade4"]
layout_mode = 2

[node name="Icon" type="Sprite2D" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade4/Panel"]
modulate = Color(0, 0, 0, 1)
position = Vector2(49, -114)
scale = Vector2(2.67342, 2.67342)
texture = SubResource("AtlasTexture_jydpq")

[node name="Title" type="Label" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade4/Panel"]
layout_mode = 0
offset_top = -76.0
offset_right = 100.0
offset_bottom = -56.0
size_flags_horizontal = 0
size_flags_vertical = 10
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_dhl3i")
theme_override_font_sizes/font_size = 12
text = "Health 
Increase"
horizontal_alignment = 1

[node name="Description" type="Label" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade4/Panel"]
layout_mode = 0
offset_top = -39.0
offset_right = 100.0
offset_bottom = 13.0
size_flags_horizontal = 0
size_flags_vertical = 10
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_dhl3i")
theme_override_font_sizes/font_size = 10
text = "HP 100 > 110"
horizontal_alignment = 1
autowrap_mode = 2

[node name="UpHealthButton" type="Button" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade4"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_dhl3i")
text = "Upgrage"

[node name="Cost" type="Label" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade4"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_fonts/font = ExtResource("2_dhl3i")
theme_override_font_sizes/font_size = 12
text = "250G"
horizontal_alignment = 1

[node name="Upgrade5" type="VBoxContainer" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="UpgradeBox" type="TextureRect" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade5"]
custom_minimum_size = Vector2(100, 150)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = ExtResource("4_ffi38")

[node name="Panel" type="Panel" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade5"]
layout_mode = 2

[node name="Icon" type="Sprite2D" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade5/Panel"]
modulate = Color(0, 0, 0, 1)
position = Vector2(47, -113)
scale = Vector2(2.55598, 2.55598)
texture = SubResource("AtlasTexture_mlo83")

[node name="Title" type="Label" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade5/Panel"]
layout_mode = 0
offset_top = -76.0
offset_right = 100.0
offset_bottom = -56.0
size_flags_horizontal = 0
size_flags_vertical = 10
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_dhl3i")
theme_override_font_sizes/font_size = 12
text = "flag
increase
"
horizontal_alignment = 1

[node name="Description" type="Label" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade5/Panel"]
layout_mode = 0
offset_top = -37.0
offset_right = 100.0
offset_bottom = 15.0
size_flags_horizontal = 0
size_flags_vertical = 10
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_dhl3i")
theme_override_font_sizes/font_size = 10
text = "Charge 10 > 11"
horizontal_alignment = 1
autowrap_mode = 2

[node name="UpFlagButton" type="Button" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade5"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_dhl3i")
text = "Upgrage"

[node name="Cost" type="Label" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade5"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_fonts/font = ExtResource("2_dhl3i")
theme_override_font_sizes/font_size = 12
text = "250G"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2

[node name="Button" type="TextureButton" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/Panel"]
layout_mode = 2
offset_left = -321.0
offset_top = 195.0
offset_right = -288.0
offset_bottom = 533.0
scale = Vector2(2, 2)
texture_normal = ExtResource("5_j7xpm")

[node name="Button2" type="TextureButton" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/Panel"]
layout_mode = 2
offset_left = -362.0
offset_top = 156.0
offset_right = -329.0
offset_bottom = 494.0
scale = Vector2(2, 2)
texture_normal = ExtResource("6_2aw6j")

[node name="Button3" type="TextureButton" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/Panel"]
layout_mode = 2
offset_left = -362.0
offset_top = 77.0
offset_right = -329.0
offset_bottom = 415.0
scale = Vector2(2, 2)
texture_normal = ExtResource("7_jisu6")

[node name="Button4" type="TextureButton" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/Panel"]
layout_mode = 2
offset_left = -283.0
offset_top = 77.0
offset_right = -250.0
offset_bottom = 415.0
scale = Vector2(2, 2)
texture_normal = ExtResource("8_ean4d")

[node name="Upgrade3" type="Sprite2D" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer"]
visible = false
position = Vector2(369, 188)
scale = Vector2(2, 2)
texture = ExtResource("9_kg4p2")

[node name="Upgrade4" type="Sprite2D" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer"]
visible = false
position = Vector2(328, 148)
scale = Vector2(2, 2)
texture = ExtResource("9_kg4p2")

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/UpgradeContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="MoneyLabel" type="Label" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 10
theme_override_fonts/font = ExtResource("2_dhl3i")
theme_override_font_sizes/font_size = 12
text = "Money
"

[node name="UpgradeContinueButton" type="Button" parent="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 10
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_dhl3i")
theme_override_font_sizes/font_size = 12
text = "Continue"
flat = true
alignment = 2

[node name="ResultContainer" type="MarginContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 175
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 175
theme_override_constants/margin_bottom = 25

[node name="ResultScreen" type="VBoxContainer" parent="CanvasLayer/ResultContainer"]
layout_mode = 2
theme_override_constants/separation = 25
script = ExtResource("10_q8m8g")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/ResultContainer/ResultScreen"]
layout_mode = 2
alignment = 1

[node name="MeterLabel" type="Label" parent="CanvasLayer/ResultContainer/ResultScreen/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_dhl3i")
text = "Dive Results"
horizontal_alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ResultContainer/ResultScreen"]
layout_mode = 2

[node name="Time" type="HBoxContainer" parent="CanvasLayer/ResultContainer/ResultScreen/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/ResultContainer/ResultScreen/VBoxContainer/Time"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_dhl3i")
text = "Time elapsed"
horizontal_alignment = 2

[node name="TimeResultLabel" type="Label" parent="CanvasLayer/ResultContainer/ResultScreen/VBoxContainer/Time"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_dhl3i")
text = "0:00"
horizontal_alignment = 2

[node name="MaxDepth" type="HBoxContainer" parent="CanvasLayer/ResultContainer/ResultScreen/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/ResultContainer/ResultScreen/VBoxContainer/MaxDepth"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_dhl3i")
text = "Max depth"
horizontal_alignment = 2

[node name="MaxDepthLabel" type="Label" parent="CanvasLayer/ResultContainer/ResultScreen/VBoxContainer/MaxDepth"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_dhl3i")
text = "150m"
horizontal_alignment = 2

[node name="Quota" type="HBoxContainer" parent="CanvasLayer/ResultContainer/ResultScreen/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/ResultContainer/ResultScreen/VBoxContainer/Quota"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_dhl3i")
text = "Quota"
horizontal_alignment = 2

[node name="QuotaResultLabel" type="Label" parent="CanvasLayer/ResultContainer/ResultScreen/VBoxContainer/Quota"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_dhl3i")
text = "Completed"
horizontal_alignment = 2

[node name="ExtraLabel" type="Label" parent="CanvasLayer/ResultContainer/ResultScreen/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("2_dhl3i")
text = "Extra Minerals:"
horizontal_alignment = 2

[node name="RedMineral" type="HBoxContainer" parent="CanvasLayer/ResultContainer/ResultScreen/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/ResultContainer/ResultScreen/VBoxContainer/RedMineral"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_dhl3i")
text = "Red"
horizontal_alignment = 2

[node name="ExtraRedLabel" type="Label" parent="CanvasLayer/ResultContainer/ResultScreen/VBoxContainer/RedMineral"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_dhl3i")
text = "1"
horizontal_alignment = 2

[node name="BlueMineral" type="HBoxContainer" parent="CanvasLayer/ResultContainer/ResultScreen/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/ResultContainer/ResultScreen/VBoxContainer/BlueMineral"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_dhl3i")
text = "Blue"
horizontal_alignment = 2

[node name="ExtraBlueLabel" type="Label" parent="CanvasLayer/ResultContainer/ResultScreen/VBoxContainer/BlueMineral"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_dhl3i")
text = "1"
horizontal_alignment = 2

[node name="GreenMineral" type="HBoxContainer" parent="CanvasLayer/ResultContainer/ResultScreen/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/ResultContainer/ResultScreen/VBoxContainer/GreenMineral"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_dhl3i")
text = "Green"
horizontal_alignment = 2

[node name="ExtraGreenLabel" type="Label" parent="CanvasLayer/ResultContainer/ResultScreen/VBoxContainer/GreenMineral"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_dhl3i")
text = "1"
horizontal_alignment = 2

[node name="Earned" type="HBoxContainer" parent="CanvasLayer/ResultContainer/ResultScreen/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/ResultContainer/ResultScreen/VBoxContainer/Earned"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_dhl3i")
text = "Gold Earned"
horizontal_alignment = 2

[node name="GoldEarnedLabel" type="Label" parent="CanvasLayer/ResultContainer/ResultScreen/VBoxContainer/Earned"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_dhl3i")
text = "100"
horizontal_alignment = 2

[node name="ContinueButton" type="Button" parent="CanvasLayer/ResultContainer/ResultScreen"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_5wsn3")
theme_override_font_sizes/font_size = 25
text = "Continue"
flat = true
alignment = 2

[node name="CRT" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_355br")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 42.0
offset_top = -1.0
offset_right = 42.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(-29, 118)
mouse_filter = 2

[node name="BG" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
position = Vector2(321, 181.5)
scale = Vector2(81.25, 46.875)
texture = ExtResource("4_ffi38")

[connection signal="pressed" from="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade/UpSonarButton" to="." method="_on_up_sonar_button_pressed"]
[connection signal="pressed" from="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade2/UpOxygenButton" to="." method="_on_up_oxygen_button_pressed"]
[connection signal="pressed" from="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade3/UpSpeedButton" to="." method="_on_up_speed_button_pressed"]
[connection signal="pressed" from="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade4/UpHealthButton" to="." method="_on_up_health_button_pressed"]
[connection signal="pressed" from="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/Upgrade5/UpFlagButton" to="." method="_on_up_flag_button_pressed"]
[connection signal="pressed" from="CanvasLayer/UpgradeContainer/VBoxContainer/HBoxContainer2/UpgradeContinueButton" to="." method="_on_upgrade_continue_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ResultContainer/ResultScreen/ContinueButton" to="." method="_on_continue_button_pressed"]
